add resume header

--- a/resume.html
+++ b/resume.html
@@ -31,15 +31,15 @@
       </div>
       <div class="row">
       	<div class="col-xs-12">
-      		<div class="job">
-      			<h3> Software developer </h3>
+      		<div class="job text-center">
+      			<h2> Software developer </h2>
       		</div>
       	</div>
       </div>
       <div class="row">
       	<div class="col-xs-6 no-right-padding">
       		<div class="aboutme">
-      			<h2> About Me </h2>
+      			<h3> About Me </h3>
       			<p>
       				I'm an enthusiasm and innovative developer, more oriented on open source software, who love work with new technologies.
 					My main goal is to learn new things every days, and apply these new things to my job.
