add two columns for name and link to linkedin and github

--- a/resume.html
+++ b/resume.html
@@ -25,10 +25,24 @@
     				<div id="photo"> 
     					<img src="avatar.jpg"></img>
     				</div>
-    				<div class="title-header"> </div>
     			</div>	
     		</div>
+        <div class="col-xs-12">
+          <div class="row title-header">
+            <div class="col-xs-6">
+              <p> Florent DALIGAND</p>
+              <p> 270 Chemin du vallon de Bagnols</p>
+              <p> 13090 AIX EN PROVENCE </p>
+            </div>
+            <div class="col-xs-6 text-right">
+              <p> Florent DALIGAND</p>
+              <p> 270 Chemin du vallon de Bagnols</p>
+              <p> 13090 AIX EN PROVENCE </p>
+            </div>
+          </div>
+        </div>
       </div>
+      
       <div class="row">
       	<div class="col-xs-12">
       		<div class="job text-center">
