add link and icon to other site

--- a/resume.html
+++ b/resume.html
@@ -29,15 +29,19 @@
     		</div>
         <div class="col-xs-12">
           <div class="row title-header">
-            <div class="col-xs-6">
+            <div class="col-xs-3">
               <p> Florent DALIGAND</p>
               <p> 270 Chemin du vallon de Bagnols</p>
               <p> 13090 AIX EN PROVENCE </p>
             </div>
-            <div class="col-xs-6 text-right">
-              <p> Florent DALIGAND</p>
-              <p> 270 Chemin du vallon de Bagnols</p>
-              <p> 13090 AIX EN PROVENCE </p>
+            <div class="col-xs-4 col-xs-offset-5">
+              <p class="text-left icon"> 
+                <img src="icon/phone.png" width="25px" height="25px"/><span>06.87.20.54.62</span><br>
+                <img src="icon/gmail.ico" width="25px" height="25px"/><span>florent.daligand@gmail.com</span><br>
+                <img src="icon/linkedin.png" width="25px" height="25px"/><span><em>https://www.linkedin.com/in/florentdaligand</em></span><br>
+                <img src="icon/github.png" width="25px" height="25px"/><span><em>https://github.com/fdaligand</em></span>
+              </p>
+              
             </div>
           </div>
         </div>
@@ -54,9 +58,9 @@
       	<div class="col-xs-6 no-right-padding">
       		<div class="aboutme">
       			<h3> About Me </h3>
-      			<p>
-      				I'm an enthusiasm and innovative developer, more oriented on open source software, who love work with new technologies.
-					My main goal is to learn new things every days, and apply these new things to my job.
+      			<p class="text-justify" >
+      				I'm an <strong>enthusiasm and innovative developer</strong>, more oriented on <strong>open source software</strong>, who love work with new technologies.
+					My main goal is to <strong>learn new things every days</strong>, and apply these new things to my job.
 
       			</p>
       		</div>
