--- a/resume.html
+++ b/resume.html
@@ -29,23 +29,23 @@
     		</div>
         <div class="col-xs-12">
           <div class="row title-header">
-            <div class="col-xs-4">
-              <p> Florent DALIGAND</p>
-              <p> 270 Chemin du vallon de Bagnols</p>
-              <p> 13090 AIX EN PROVENCE </p>
+            <div class="col-xs-4 icon">
+                <h4> Florent DALIGAND </h4>
+                <img src="icon/phone.png" width="25px" height="25px"/><span>06.87.20.54.62</span><br>
+                <img src="icon/gmail.ico" width="25px" height="25px"/><span>florent.daligand@gmail.com</span><br>
+                
             </div>       
             <div class="col-xs-4">
               <div class="job text-center">
                 <h2> Software developer </h2>
               </div>
             </div>
-            <div class="col-xs-4">
-              <p class="text-left icon"> 
-                <img src="icon/phone.png" width="25px" height="25px"/><span>06.87.20.54.62</span><br>
-                <img src="icon/gmail.ico" width="25px" height="25px"/><span>florent.daligand@gmail.com</span><br>
-                <img src="icon/linkedin.png" width="25px" height="25px"/><span><em>https://www.linkedin.com/in/florentdaligand</em></span><br>
-                <img src="icon/github.png" width="25px" height="25px"/><span><em>https://github.com/fdaligand</em></span>
-              </p>
+            <div class="col-xs-4 icon">
+              <img src="icon/maps.png" width="25px" height="25px" style="vertical-align:top;"/>
+              <div class="addr"> 270 Chemin du vallon de Bagnols<br>
+              13090 AIX EN PROVENCE </div>
+              <img src="icon/linkedin.png" width="25px" height="25px"/><span><em>https://www.linkedin.com/in/florentdaligand</em></span><br>
+              <img src="icon/github.png" width="25px" height="25px"/><span><em>https://github.com/fdaligand</em></span>
               
             </div>
           </div>
@@ -58,7 +58,7 @@
       			<h3> About Me </h3>
       			<p class="text-justify" >
       				I'm an <strong>enthusiasm and innovative developer</strong>, more oriented on <strong>open source software</strong>, who love work with new technologies.
-					My main goal is to <strong>learn new things every days</strong>, and apply these new things to my job.
+				      My main goal is to <strong>learn new things every days</strong>, and apply these new things to my job.
 
       			</p>
       		</div>
