--- a/resume.html
+++ b/resume.html
@@ -15,6 +15,10 @@
 	<!-- Optional theme -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
 
+
+  <!-- fontawesome library link-->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+
 	<link rel="stylesheet" type="text/css" href="resume.css">
   </head>
   <body>
@@ -53,19 +57,66 @@
       </div>
 
       <div class="row">
-      	<div class="col-xs-6 no-right-padding">
+      	<div class="col-xs-6">
       		<div class="aboutme">
-      			<h3> About Me </h3>
+      			<h3>About Me </h3>
       			<p class="text-justify" >
       				I'm an <strong>enthusiasm and innovative developer</strong>, more oriented on <strong>open source software</strong>, who love work with new technologies.
 				      My main goal is to <strong>learn new things every days</strong>, and apply these new things to my job.
 
       			</p>
       		</div>
-      		<div class="experience"></div>
+          <div class="experience"> My experience here</div>
       	</div>
       	<div class="col-xs-6 no-left-padding">
-      		<div class="formation"></div>
+      		<div class="row formation">
+            <div class="col-xs-12">
+              <h3><i class="fa fa-graduation-cap circle-icon"></i><span>Education<span></h3>
+            </div> 
+            <div class="col-xs-8 col-xs-offset-1">
+              <div class="diplome" style="height: 9em;">
+                <div class="date"> 2012 </div>
+                <div class="circle"> </div>
+                <div class="name">  <strong> MASTER OF SCIENCE (MSc) </strong> </div>
+                <div class="spec"> Genie Electrical </div>
+                <div class="address"><i class="fa fa-map-marker"></i> INSA Lyon</div>
+              </div>
+            </div>
+            <div class="col-xs-3">
+              <div class="school-icon"> <img src="icon/insa.jpg" width="50px" height="50px"> </div>
+            </div> 
+          </div>
+
+          <div class="row formation">
+            <div class="col-xs-8 col-xs-offset-1">
+              <div class="diplome" style="height: 6em;">
+                <div class="date"> 2009 </div>
+                <div class="circle"> </div>
+                <div class="name">  <strong> MASTER OF SCIENCE (MSc) </strong> </div>
+                <div class="spec"> Genie Electrical </div>
+                <div class="address"><i class="fa fa-map-marker"></i> INSA Lyon</div>
+              </div>
+            </div>
+            <div class="col-xs-3">
+              <div class="school-icon"> <img src="icon/insa.jpg" width="50px" height="50px"> </div>
+            </div>
+          </div>
+
+          <div class="row formation">
+            <div class="col-xs-8 col-xs-offset-1">
+              <div class="diplome" style="height: 6em;">
+                <div class="date"> 2007 </div>
+                <div class="circle"> </div>
+                <div class="name">  <strong> MASTER OF SCIENCE (MSc) </strong> </div>
+                <div class="spec"> Genie Electrical </div>
+                <div class="address"><i class="fa fa-map-marker"></i> INSA Lyon</div>
+              </div>
+            </div>
+            <div class="col-xs-3">
+              <div class="school-icon"> <img src="icon/insa.jpg" width="50px" height="50px"> </div>
+            </div> 
+          </div>
+
       	</div>
       </div>
     </div>
