add experience block

--- a/resume.html
+++ b/resume.html
@@ -59,14 +59,99 @@
       <div class="row">
       	<div class="col-xs-6">
       		<div class="aboutme">
-      			<h3>About Me </h3>
+      			<h3><i class="fa fa-user circle-icon"></i><span>About Me</span></h3>
       			<p class="text-justify" >
       				I'm an <strong>enthusiasm and innovative developer</strong>, more oriented on <strong>open source software</strong>, who love work with new technologies.
 				      My main goal is to <strong>learn new things every days</strong>, and apply these new things to my job.
 
       			</p>
       		</div>
-          <div class="experience"> My experience here</div>
+          <div class="experience">
+              <h3> <i class="fa fa-cogs circle-icon"></i><span>Experience</span></h3>
+
+              <div class="row">
+                  <div class="col-xs-3">
+                    <img src="icon/IS.jpg" class="img-thumbnail"/>
+                    <div class="row fromto">
+                        <div class="col-xs-4 from">10/2013</div>
+                        <div class="col-xs-4 col-xs-offset-4 to"> now</div>
+                    </div>
+                  </div>
+                  <div class="col-xs-9">
+                    <h4> Software engineer </h4>
+                    <div class="job-description">
+                      <p> Development of a continuous integration services for a firmware team (developers, validation engineer and managers)<br>
+                        <ul>
+                          <li>
+                            Installation, set-up and maintenance of a Jenkins server and more than 20 nodes ( Python    scripting, Linux shell, Windows batch, ...)
+                          </li>
+                          <li>
+                            Jenkins plug-in development to connect a DB, manage events and compute results
+                          </li>
+                          <li>
+                            Development of a complete database architecture, views, index and stored procedures
+                          </li>
+                          <li>
+                            Specification, development and deployment from scratch of a web site for visualisation and management of the continuous integration
+                          </li>
+                        </ul> 
+                        Development of multiple tools to facilitate continuous integration
+                        <ul>
+                          <li>
+                            Versionning tools :  Use to set a version on binaries, documents and test reports in order to track modification easily
+                          </li>
+                          <li>
+                            DB : Development of a set of tools to facilitate team working on the same DB. Versionning of schemes, easy dump/restore/update command for deployement
+                          </li>
+                        </ul>
+                        Environment:<br>
+                        Python, Java, C, SQL, Django, Postgresql, bootstrap, Javascript, Ajax 
+                    </p>
+                    </div>
+                  </div>
+              </div>
+              <div class="row">
+                  <div class="col-xs-3">
+                    <img src="icon/MDR.jpg" class="img-thumbnail"/>
+                    <div class="row fromto">
+                        <div class="col-xs-4 from">02/2012</div>
+                        <div class="col-xs-4 col-xs-offset-4 to"> 10/2013</div>
+                    </div>
+                  </div>
+                  <div class="col-xs-9">
+                    <h4> Industrial Computing engineer </h4>
+                    <div class="job-description">
+                      <p> Development of a continuous integration services for a firmware team (developers, validation engineer and managers)<br>
+                        <ul>
+                          <li>
+                            Installation, set-up and maintenance of a Jenkins server and more than 20 nodes ( Python    scripting, Linux shell, Windows batch, ...)
+                          </li>
+                          <li>
+                            Jenkins plug-in development to connect a DB, manage events and compute results
+                          </li>
+                          <li>
+                            Development of a complete database architecture, views, index and stored procedures
+                          </li>
+                          <li>
+                            Specification, development and deployment from scratch of a web site for visualisation and management of the continuous integration
+                          </li>
+                        </ul> 
+                        Development of multiple tools to facilitate continuous integration
+                        <ul>
+                          <li>
+                            Versionning tools :  Use to set a version on binaries, documents and test reports in order to track modification easily
+                          </li>
+                          <li>
+                            DB : Development of a set of tools to facilitate team working on the same DB. Versionning of schemes, easy dump/restore/update command for deployement
+                          </li>
+                        </ul>
+                        Environment:<br>
+                        Python, Java, C, SQL, Django, Postgresql, bootstrap, Javascript, Ajax 
+                    </p>
+                    </div>
+                  </div>
+              </div>
+          </div>
       	</div>
       	<div class="col-xs-6 no-left-padding">
       		<div class="row formation">
