--- a/resume.html
+++ b/resume.html
@@ -20,6 +20,9 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 
 	<link rel="stylesheet" type="text/css" href="resume.css">
+
+  
+
   </head>
   <body>
     <div class="container">
@@ -67,7 +70,7 @@
       			</p>
       		</div>
           <div class="experience">
-              <h3> <i class="fa fa-cogs circle-icon"></i><span>Experience</span></h3>
+              <h3><i class="fa fa-industry circle-icon"></i><span>Experience</span></h3>
 
               <div class="row">
                   <div class="col-xs-3">
@@ -154,54 +157,70 @@
           </div>
       	</div>
       	<div class="col-xs-6 no-left-padding">
-      		<div class="row formation">
-            <div class="col-xs-12">
-              <h3><i class="fa fa-graduation-cap circle-icon"></i><span>Education<span></h3>
-            </div> 
-            <div class="col-xs-8 col-xs-offset-1">
-              <div class="diplome" style="height: 9em;">
-                <div class="date"> 2012 </div>
-                <div class="circle"> </div>
-                <div class="name">  <strong> MASTER OF SCIENCE (MSc) </strong> </div>
-                <div class="spec"> Genie Electrical </div>
-                <div class="address"><i class="fa fa-map-marker"></i> INSA Lyon</div>
+        		<div class="row formation">
+              <div class="col-xs-12">
+                <h3><i class="fa fa-graduation-cap circle-icon"></i><span>Education<span></h3>
+              </div> 
+              <div class="col-xs-8 col-xs-offset-1">
+                <div class="diplome" style="height: 9em;">
+                  <div class="date"> 2012 </div>
+                  <div class="circle"> </div>
+                  <div class="name">  <strong> MASTER OF SCIENCE (MSc) </strong> </div>
+                  <div class="spec"> Genie Electrical </div>
+                  <div class="address"><i class="fa fa-map-marker"></i> INSA Lyon</div>
+                </div>
+              </div>
+              <div class="col-xs-3">
+                <div class="school-icon"> <img src="icon/insa.jpg" width="50px" height="50px"> </div>
+              </div> 
+            </div>
+
+            <div class="row formation">
+              <div class="col-xs-8 col-xs-offset-1">
+                <div class="diplome" style="height: 6em;">
+                  <div class="date"> 2009 </div>
+                  <div class="circle"> </div>
+                  <div class="name">  <strong> MASTER OF SCIENCE (MSc) </strong> </div>
+                  <div class="spec"> Genie Electrical </div>
+                  <div class="address"><i class="fa fa-map-marker"></i> INSA Lyon</div>
+                </div>
+              </div>
+              <div class="col-xs-3">
+                <div class="school-icon"> <img src="icon/insa.jpg" width="50px" height="50px"> </div>
               </div>
             </div>
-            <div class="col-xs-3">
-              <div class="school-icon"> <img src="icon/insa.jpg" width="50px" height="50px"> </div>
-            </div> 
-          </div>
 
-          <div class="row formation">
-            <div class="col-xs-8 col-xs-offset-1">
-              <div class="diplome" style="height: 6em;">
-                <div class="date"> 2009 </div>
-                <div class="circle"> </div>
-                <div class="name">  <strong> MASTER OF SCIENCE (MSc) </strong> </div>
-                <div class="spec"> Genie Electrical </div>
-                <div class="address"><i class="fa fa-map-marker"></i> INSA Lyon</div>
+            <div class="row formation">
+              <div class="col-xs-8 col-xs-offset-1">
+                <div class="diplome" style="height: 6em;">
+                  <div class="date"> 2007 </div>
+                  <div class="circle"> </div>
+                  <div class="name">  <strong> MASTER OF SCIENCE (MSc) </strong> </div>
+                  <div class="spec"> Genie Electrical </div>
+                  <div class="address"><i class="fa fa-map-marker"></i> INSA Lyon</div>
+                </div>
               </div>
+              <div class="col-xs-3">
+                <div class="school-icon"> <img src="icon/insa.jpg" width="50px" height="50px"> </div>
+              </div> 
             </div>
-            <div class="col-xs-3">
-              <div class="school-icon"> <img src="icon/insa.jpg" width="50px" height="50px"> </div>
-            </div>
-          </div>
 
-          <div class="row formation">
-            <div class="col-xs-8 col-xs-offset-1">
-              <div class="diplome" style="height: 6em;">
-                <div class="date"> 2007 </div>
-                <div class="circle"> </div>
-                <div class="name">  <strong> MASTER OF SCIENCE (MSc) </strong> </div>
-                <div class="spec"> Genie Electrical </div>
-                <div class="address"><i class="fa fa-map-marker"></i> INSA Lyon</div>
-              </div>
+          <div class="row">
+            <div class="col-xs-12 skill">
+              <h3> <i class="fa fa-cogs circle-icon"></i></i><span>Skills </span></h3>
             </div>
-            <div class="col-xs-3">
-              <div class="school-icon"> <img src="icon/insa.jpg" width="50px" height="50px"> </div>
-            </div> 
-          </div>
+            <div class="col-xs-3 pythonSkill">
+            </div>
+            <div class="col-xs-3 webSkill">
+            </div>
+            <div class="col-xs-3 sqlSkill">
+            </div>
+             <div class="col-xs-3 ccppSkill">
+            </div>
+            <div class="col-xs-3 javaSkill">
+            </div>
 
+          </div>
       	</div>
       </div>
     </div>
@@ -209,5 +228,20 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Latest compiled and minified JavaScript -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+
+  <!-- link to D3.js lib -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.15/d3.min.js" charset="utf-8"></script>
+
+  <!-- link to ownmade javascript -->
+  <script src="skillGraph.js"></script>
+   <script>
+      editSkillGraph("icon/python.ico",90,".pythonSkill");
+      editSkillGraph("icon/java.png",40,".javaSkill");
+      editSkillGraph(undefined,80,".webSkill",["HTML","CSS","JAVASCRIP","JQUERY","SVG"]);
+      editSkillGraph("icon/sql.jpg",60,".sqlSkill");
+      editSkillGraph("icon/ccpp.png",75,".ccppSkill");
+      
+    
+    </script>
   </body>
 </html>
