--- a/resume.html
+++ b/resume.html
@@ -108,20 +108,18 @@
               <div class="row">
                 <div clas="col-xs-12">
                     <div class="job-description">
-                      Development and deployment  of continuous integration services for a firmware team
+                      <strong>Development and deployment  of continuous integration services</strong> for a firmware team
                         <ul>
-                          <li>On commit build</li>
-                          <li>On commit, daily and weekly regression campaigns</li>
-                          <li>Automatic tagging and versionning of the binaries</li>
+                          <li>On commit build (<em>git</em>,<em>svn</em>)</li>
+                          <li>On commit, daily and weekly regression campaigns(<em>shell script</em>)</li>
+                          <li>Automatic tagging and versionning of the binaries(<em>Python</em>,<em>C++</em>)</li>
                         </ul>
                         Development of a framework to render results from continuous integration 
                         <ul>
-                          <li>Jenkins plug-in to connect outputs to a database, to manage event on results and to inform users.</li>
-                          <li>Development of a complete database architecture, views, index and stored procedures</li>
-                          <li>Specification, development and deployment from scratch of a web site for visualisation and management of the continuous integration</li>
+                          <li>Jenkins plug-in to connect outputs to a database, to manage event on results and to inform users.(<em>Java</em>)</li>
+                          <li>Development of a complete database architecture, views, index and stored procedures(<em>sql</em>,<em>pl/sql</em>,<em>postgresql</em>)</li>
+                          <li>Specification, development and deployment from scratch of a web site for visualisation and management of the continuous integration(<em>Python</em>,<em>Django</em>,<em>HTML</em>,<em>CSS</em>,<em>javascript</em>,<em>Bootstrap</em>)</li>
                         </ul>
-                        Environment:<br>
-                        Python, Java, C, SQL, Django, Postgresql, Bootstrap, HTML, CSS, Javascript, Ajax 
               </div>
             </div>
           </div>
@@ -135,26 +133,28 @@
                     </div>
                   </div>
                   <div class="col-xs-9">
-                    <h4> Industrial Computing developper and Project manager </h4>
+                      <h4> Industrial Computing developper and Project manager </h4>
+                  </div>
+              </div>
+              <div class="row">
+                <div class="col-xs-12">
                     <div class="job-description">
                       Industrial computing developer 
                       <ul>
-                        <li>Development of a new system architecture (GEMMA)</li>
-                        <li>Build of a modular and scalable software to fit to the entire product range</li>
+                        <li>Development of a new system architecture (<em>state machine</em>,<em>GEMMA</em>)</li>
+                        <li>Build of a modular and scalable software to fit to the entire product range(<em>CEI 6113-3 languages</em>)</li>
                         <li>Implementation of new communication protocols (Modbus, TCP/IP, GSM)</li>
                         <li>Design of a new user interface (HMI)</li>
                         <li>Specification,development and commissioning with the customer</li>
                       </ul>
                       Project manager on complex systems (electric, electronic, automatism):
                       <ul>
+                        <li>international project management (Europe,Asia and Middle East) from 10k€ to +100k€</li>
                         <li>Unique interface with the customer after PO</li>
                         <li>Factory acceptance test</li>
                         <li>Commissioning</li>
                         <li>Technical support</li>
                       </ul>
-                      Environment:<br>
-                      CEI 6113-3 languages, state machine, ModBus, CAN, TCP/IP, international project management (Europe,Asia and Middle East) from 10k€ to +100k€  
-                    
                     </div>
                   </div>
               </div>
@@ -167,44 +167,44 @@
               <div class="col-xs-12">
                 <h3><i class="fa fa-graduation-cap circle-icon"></i><span>Education<span></h3>
               </div> 
-              <div class="col-xs-8 col-xs-offset-1">
-                <div class="diplome" style="height: 9em;">
+              <div class="col-xs-10 col-xs-offset-1">
+                <div class="diplome" style="height: 6em;">
                   <div class="date"> 2012 </div>
                   <div class="circle"> </div>
-                  <div class="name">  <strong> MASTER OF SCIENCE (MSc) </strong> </div>
+                  <div class="name">  <strong> Master’s Degree</strong> </div>
                   <div class="spec"> Genie Electrical </div>
                   <div class="address"><i class="fa fa-map-marker"></i> INSA Lyon</div>
                 </div>
               </div>
-              <div class="col-xs-3">
+              <div class="col-xs-1 no-left-padding">
                 <div class="school-icon"> <img src="icon/insa.jpg" width="50px" height="50px"> </div>
               </div> 
               </div>
               <div class="row formation">
-              <div class="col-xs-8 col-xs-offset-1">
-                <div class="diplome" style="height: 6em;">
+              <div class="col-xs-10 col-xs-offset-1">
+                <div class="diplome" style="height: 7.5em;">
                   <div class="date"> 2009 </div>
                   <div class="circle"> </div>
-                  <div class="name">  <strong> MASTER OF SCIENCE (MSc) </strong> </div>
-                  <div class="spec"> Genie Electrical </div>
-                  <div class="address"><i class="fa fa-map-marker"></i> INSA Lyon</div>
+                  <div class="name">  <strong> Bachelor of Technology (BTech) </strong> </div>
+                  <div class="spec">Electrical Engineering and Industrial Computing</div>
+                  <div class="address"><i class="fa fa-map-marker"></i>IUTB Lyon 1</div>
                 </div>
               </div>
-              <div class="col-xs-3">
-                <div class="school-icon"> <img src="icon/insa.jpg" width="50px" height="50px"> </div>
+              <div class="col-xs-1 no-left-padding">
+                <div class="school-icon"> <img src="icon/iutb.png" width="50px" height="50px"> </div>
               </div>
               </div>
               <div class="row formation">
-              <div class="col-xs-8 col-xs-offset-1">
+              <div class="col-xs-10 col-xs-offset-1">
                 <div class="diplome" style="height: 6em;">
                   <div class="date"> 2007 </div>
                   <div class="circle"> </div>
-                  <div class="name">  <strong> MASTER OF SCIENCE (MSc) </strong> </div>
-                  <div class="spec"> Genie Electrical </div>
-                  <div class="address"><i class="fa fa-map-marker"></i> INSA Lyon</div>
+                  <div class="name">  <strong> A-levels </strong> </div>
+                  <div class="spec">Electrical Engineering</div>
+                  <div class="address"><i class="fa fa-map-marker"></i>Lycée Camille Claudel, Digoin</div>
                 </div>
               </div>
-              <div class="col-xs-3">
+              <div class="col-xs-1 no-left-padding">
                 <div class="school-icon"> <img src="icon/insa.jpg" width="50px" height="50px"> </div>
               </div> 
               </div>
