--- a/resume.html
+++ b/resume.html
@@ -205,7 +205,7 @@
                 </div>
               </div>
               <div class="col-xs-1 no-left-padding">
-                <div class="school-icon"> <img src="icon/insa.jpg" width="50px" height="50px"> </div>
+                <div class="school-icon"> <img src="icon/lycee.jpg" width="50px" height="50px"> </div>
               </div> 
               </div>
             </div>
