update skills visualisation and time elapsed for expereince

--- a/resume.html
+++ b/resume.html
@@ -94,16 +94,33 @@
               <h3 class="no-margin"><i class="fa fa-industry circle-icon"></i><span>Experience</span></h3>
 
               <div class="row">
-                  <div class="col-xs-3">
-                    <img src="icon/IS.jpg" class="img-thumbnail"/>
-                    <div class="row fromto">
-                        <div class="col-xs-4 from">10/2013</div>
-                        <div class="col-xs-4 col-xs-offset-4 to"> now</div>
+                <div class="col-xs-4">
+                  <img src="icon/IS.jpg" class="img-thumbnail"/>
+                </div>
+                <div class="col-xs-8">
+                  <div class="row">
+                    <div class="col-xs-12">
+                      <h4 class="no-margin"> Front-end/Back-end developper</h4>
                     </div>
                   </div>
-                  <div class="col-xs-9">
-                    <h4> Front-end/Back-end developper</h4>
+                  <div class="row">
+                    <div class="col-xs-2">
+                      10-2013
+                    </div>
+                    <div class="col-xs-2 col-xs-offset-6">
+                      06-2016
+                    </div>
                   </div>
+                  <div class="row">
+                    <div class="col-xs-2">
+                      <img src="icon/start.png" height="20px" width="20px" />
+                    </div>
+                    <div class="col-xs-7 exp-line"></div>
+                    <div class="col-xs-2">
+                      <img src="icon/finish.png" height="20px" width="20px" />
+                    </div>
+                  </div>
+                </div>
               </div>
               <div class="row">
                 <div clas="col-xs-12">
@@ -211,36 +228,155 @@
             </div>
           </div>
           <div class="row skill">
-            <div class="col-xs-12">
-              <div class="row">
-                <div class="col-xs-12 language">
-                  <h4><i class="fa fa-code circle-icon"></i><span>Languages</span></h4></div>
-                <div class="col-xs-4 pythonSkill">
+            <div class="col-xs-12 language">
+              <h4><i class="fa fa-code circle-icon"></i><span>Languages</span></h4>
+            </div>
+            <div class="col-xs-1">
+              <img src="icon/python.png" height="20px" width="20px">
+            </div>
+            <div class="col-xs-3">
+              Python
+            </div>
+            <div class="col-xs-7">
+              <div class="progress">
+                <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%;">
+                  <span class="sr-only">90% Complete</span>
                 </div>
-                <div class="col-xs-4 webSkill">
+              </div>
+            </div>
+            <div class="col-xs-1">
+              <img src="icon/java.png" height="20px" width="20px">
+            </div>
+            <div class="col-xs-3">
+              Java
+            </div>
+            <div class="col-xs-7">
+              <div class="progress">
+                <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="60"aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
+                  <span class="sr-only">60% Complete</span>
                 </div>
-                <div class="col-xs-4 ccppSkill">
+              </div>
+            </div>
+            <div class="col-xs-1">
+              <img src="icon/C++.png" height="20px" width="20px">
+            </div>
+             <div class="col-xs-3">
+              C/C++
+            </div>
+            <div class="col-xs-7">
+              <div class="progress">
+                <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%;">
+                  <span class="sr-only">75% Complete</span>
                 </div>
-                <div class="col-xs-4 sqlSkill">
+              </div>
+            </div>
+            <div class="col-xs-1">
+              <img src="icon/sql.png" height="20px" width="20px">
+            </div>
+            <div class="col-xs-3">
+              SQL
+            </div>
+            <div class="col-xs-7">
+              <div class="progress">
+                <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 70%;">
+                  <span class="sr-only">70% Complete</span>
                 </div>
-                <div class="col-xs-4 javaSkill">
+              </div>
+            </div>
+            <div class="col-xs-1">
+              <img src="icon/web.png" height="20px" width="20px">
+            </div>
+            <div class="col-xs-3 text-justify">
+              <p>HTML5 CSS3 JavaScript</p>
+            </div>
+            <div class="col-xs-7">
+              <div class="progress">
+                <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width: 85%;">
+                  <span class="sr-only">85% Complete</span>
                 </div>
+              </div>
+            </div>
                 
                 <div class="col-xs-12 tools">
                   <h4><i class="fa fa-wrench circle-icon"></i><span>Tools</span></h4></div>
-                  <div class="col-xs-4 djangoSkill">
-                </div>
-                <div class="col-xs-4 bootsrapSkill">
-                </div>
-                <div class="col-xs-4 jQuerySkill">
-                </div>
-                 <div class="col-xs-4 postgresqlSkill">
-                </div>
-                <div class="col-xs-4 jenkinsSkill">
-                </div>
-                <div class="col-xs-4 linuxSkill">
+            <div class="col-xs-1">
+              <img src="icon/django.png" height="20px" width="20px">
+            </div>
+            <div class="col-xs-3">
+              Django
+            </div>
+            <div class="col-xs-7">
+              <div class="progress">
+                <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%;">
+                  <span class="sr-only">90% Complete</span>
                 </div>
               </div>
+            </div>
+            <div class="col-xs-1">
+              <img src="icon/bootstrap.png" height="20px" width="20px">
+            </div>
+            <div class="col-xs-3">
+              Bootstrap
+            </div>
+            <div class="col-xs-7">
+              <div class="progress">
+                <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%;">
+                  <span class="sr-only">90% Complete</span>
+                </div>
+              </div>
+            </div>
+            <div class="col-xs-1">
+              <img src="icon/jquery.png" height="20px" width="20px">
+            </div>
+            <div class="col-xs-3">
+              jQuery
+            </div>
+            <div class="col-xs-7">
+              <div class="progress">
+                <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
+                  <span class="sr-only">60% Complete</span>
+                </div>
+              </div>
+            </div>
+            <div class="col-xs-1">
+              <img src="icon/postgresql.png" height="20px" width="20px">
+            </div>
+            <div class="col-xs-3">
+              PostgreSQL
+            </div>
+            <div class="col-xs-7">
+              <div class="progress">
+                <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%;">
+                  <span class="sr-only">75% Complete</span>
+                </div>
+              </div>
+            </div>
+            <div class="col-xs-1">
+              <img src="icon/jenkins.png" height="20px" width="20px">
+            </div>
+            <div class="col-xs-3">
+              Jenkins
+            </div>
+            <div class="col-xs-7">
+              <div class="progress">
+                <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%;">
+                <span class="sr-only">90% Complete</span>
+                </div>
+              </div>
+            </div>
+            <div class="col-xs-1">
+              <img src="icon/linux.svg" height="20px" width="20px">
+            </div>
+            <div class="col-xs-3">
+              Linux
+            </div>
+            <div class="col-xs-7">
+              <div class="progress">
+                <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%;">
+                 <span class="sr-only">75% Complete</span>
+                </div>
+              </div>
+            </div>
             </div>
           </div>
       	</div>
@@ -257,11 +393,11 @@
   <!-- link to ownmade javascript -->
   <script src="skillGraph.js"></script>
    <script>
-      editSkillGraph("icon/python.ico",90,".pythonSkill");
+      /*editSkillGraph("icon/python.ico",90,".pythonSkill");
       editSkillGraph("icon/java.png",60,".javaSkill");
       editSkillGraph(undefined,80,".webSkill",["HTML","CSS","JAVASCRIP","SVG"]);
       editSkillGraph("icon/sql.jpg",60,".sqlSkill");
-      editSkillGraph("icon/ccpp.png",75,".ccppSkill");
+      editSkillGraph("icon/ccpp.png",75,".ccppSkill");*/
       editSkillGraph("icon/django.jpg",90,".djangoSkill");
       editSkillGraph("icon/jquery.png",60,".jQuerySkill");
       editSkillGraph("icon/bootstrap.png",80,".bootsrapSkill");
