--- a/resume.html
+++ b/resume.html
@@ -10,10 +10,10 @@
     <title>Florent DALIGAND</title>
 
     <!-- Latest compiled and minified CSS -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+	<link rel="stylesheet" href="bootstrap-3.3.6-dist/css/bootstrap.css">
 
 	<!-- Optional theme -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
+	<link rel="stylesheet" href="bootstrap-3.3.6-dist/css/bootstrap-theme.css">
 
 
   <!-- fontawesome library link-->
@@ -223,6 +223,8 @@
                     </div>
                   </div>
                 </div>
+              </div>
+              <div class="row skill">
                 <div class="col-xs-12 tools">
                   <h4><i class="fa fa-wrench circle-icon"></i><span>Tools</span></h4>
                 </div>
@@ -255,8 +257,6 @@
                 <div class="col-xs-1">
                   <img src="icon/jquery.png" height="20px" width="20px">
                 </div>
-              </div>
-              <div class="row skill">
                 <div class="col-xs-3">
                   jQuery
                 </div>
