rearange tools section

--- a/resume.html
+++ b/resume.html
@@ -224,93 +224,10 @@
                   </div>
                 </div>
               </div>
-              <div class="row skill">
-                <div class="col-xs-12 tools">
-                  <h4><i class="fa fa-wrench circle-icon"></i><span>Tools</span></h4>
-                </div>
-                <div class="col-xs-1">
-                  <img src="icon/django.png" height="20px" width="20px">
-                </div>
-                <div class="col-xs-3">
-                  Django
-                </div>
-                <div class="col-xs-7">
-                  <div class="progress">
-                    <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%;">
-                      <span class="sr-only">90% Complete</span>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-xs-1">
-                  <img src="icon/bootstrap.png" height="20px" width="20px">
-                </div>
-                <div class="col-xs-3">
-                  Bootstrap
-                </div>
-                <div class="col-xs-7">
-                  <div class="progress">
-                    <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%;">
-                      <span class="sr-only">90% Complete</span>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-xs-1">
-                  <img src="icon/jquery.png" height="20px" width="20px">
-                </div>
-                <div class="col-xs-3">
-                  jQuery
-                </div>
-                <div class="col-xs-7">
-                  <div class="progress">
-                    <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
-                      <span class="sr-only">60% Complete</span>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-xs-1">
-                  <img src="icon/postgresql.png" height="20px" width="20px">
-                </div>
-                <div class="col-xs-3">
-                  PostgreSQL
-                </div>
-                <div class="col-xs-7">
-                  <div class="progress">
-                    <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%;">
-                      <span class="sr-only">75% Complete</span>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-xs-1">
-                  <img src="icon/jenkins.png" height="20px" width="20px">
-                </div>
-                <div class="col-xs-3">
-                  Jenkins
-                </div>
-                <div class="col-xs-7">
-                  <div class="progress">
-                    <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%;">
-                      <span class="sr-only">90% Complete</span>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-xs-1">
-                  <img src="icon/linux.svg" height="20px" width="20px">
-                </div>
-                <div class="col-xs-3">
-                  Linux
-                </div>
-                <div class="col-xs-7">
-                  <div class="progress">
-                    <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%;">
-                      <span class="sr-only">75% Complete</span>
-                    </div>
-                  </div>
-                </div>
-              </div>
             </div>
           </div>
         </div>
-        <div class="col-xs-7 no-left-padding">
+        <div class="col-xs-7">
           <div class="row">
             <div class="col-xs-12">
               <div class="experience">
@@ -396,23 +313,39 @@
                   <div class="job-description">
                     Industrial computing developer 
                     <ul>
-                      <li>Development of a new system architecture (<em>state machine</em>,<em>GEMMA</em>)</li>
-                      <li>Build of a modular and scalable software to fit to the entire product range(<em>CEI 6113-3 languages</em>)</li>
-                      <li>Implementation of new communication protocols (Modbus, TCP/IP, GSM)</li>
-                      <li>Design of a new user interface (HMI)</li>
-                      <li>Specification,development and commissioning with the customer</li>
+                      <li>Development of a new system architecture (<em>state machine</em>,<em>GEMMA</em>),Build of a modular and scalable software to fit to the entire product range(<em>CEI 6113-3 languages</em>), Implementation of new communication protocols (Modbus, TCP/IP, GSM)</li>
                     </ul>
                     Project manager on complex systems (electric, electronic, automatism):
                     <ul>
                       <li>international project management (Europe,Asia and Middle East) from 10k€ to +100k€</li>
-                      <li>Unique interface with the customer after PO</li>
-                      <li>Factory acceptance test</li>
-                      <li>Commissioning</li>
-                      <li>Technical support</li>
+                      <li>Unique interface with the customer after PO, organisation of key points ( Relase planning , Factory acceptance test, Commissioning) , technical support</li>
                     </ul>
                   </div>
               </div>
             </div>
+                          <div class="row skill">
+                <div class="col-xs-12 tools">
+                  <h4><i class="fa fa-wrench circle-icon"></i><span>Tools</span></h4>
+                </div>
+                <div class="col-xs-4">
+                  <img src="icon/django.png" height="20px" width="20px"> Django </img>
+                </div>
+                <div class="col-xs-4">
+                  <img src="icon/bootstrap.png" height="20px" width="20px"> Bootstrap </img>
+                </div>
+                <div class="col-xs-4">
+                  <img src="icon/jquery.png" height="20px" width="20px">jQuery</img>
+                </div>
+                <div class="col-xs-4">
+                  <img src="icon/postgresql.png" height="20px" width="20px">PostgreSQL</img>
+                </div>
+                <div class="col-xs-4">
+                  <img src="icon/jenkins.png" height="20px" width="20px">Jenkins</img>
+                </div>
+                <div class="col-xs-4">
+                  <img src="icon/linux.svg" height="20px" width="20px">Linux</img>
+                </div>
+              </div>
           </div>
             </div>
           </div>
