--- a/resume.html
+++ b/resume.html
@@ -91,7 +91,7 @@
       </div>
 
       <div class="row">
-      	<div class="col-xs-5">
+      	<div class="col-xs-5 column">
           <div class="row">
       		  <div class="col-xs-12 aboutme">
       			 <h3 class="no-margin">
@@ -109,7 +109,7 @@
             <div class="col-xs-12 education">
               <div class="row formation">
               <div class="col-xs-12">
-                <h3><i class="fa fa-graduation-cap circle-icon"></i><span>Education<span></h3>
+                <h3 class="no-margin"><i class="fa fa-graduation-cap circle-icon"></i><span>Education<span></h3>
               </div> 
               <div class="col-xs-10 col-xs-offset-1">
                 <div class="diplome" style="height: 6em;">
@@ -227,11 +227,11 @@
             </div>
           </div>
         </div>
-        <div class="col-xs-7">
-          <div class="row">
+        <div class="col-xs-7 column">
+          <div class="row experience">
             <div class="col-xs-12">
-              <div class="experience">
                 <h3 class="no-margin"><i class="fa fa-industry circle-icon"></i><span>Experience</span></h3>
+            </div>
                   <div class="row">
                     <div class="col-xs-4">
                       <img src="icon/IS.jpg" class="img-thumbnail"/>
@@ -323,27 +323,36 @@
                   </div>
               </div>
             </div>
-                          <div class="row skill">
+              <div class="row">
                 <div class="col-xs-12 tools">
                   <h4><i class="fa fa-wrench circle-icon"></i><span>Tools</span></h4>
                 </div>
-                <div class="col-xs-4">
+                <div class="col-xs-4 tools-item">
                   <img src="icon/django.png" height="20px" width="20px"> Django </img>
                 </div>
-                <div class="col-xs-4">
+                <div class="col-xs-4 tools-item">
                   <img src="icon/bootstrap.png" height="20px" width="20px"> Bootstrap </img>
                 </div>
-                <div class="col-xs-4">
+                <div class="col-xs-4 tools-item">
                   <img src="icon/jquery.png" height="20px" width="20px">jQuery</img>
                 </div>
-                <div class="col-xs-4">
+                <div class="col-xs-4 tools-item">
                   <img src="icon/postgresql.png" height="20px" width="20px">PostgreSQL</img>
                 </div>
-                <div class="col-xs-4">
-                  <img src="icon/jenkins.png" height="20px" width="20px">Jenkins</img>
+                <div class="col-xs-4 tools-item">
+                  <img src="icon/mysql.png" height="20px" width="20px">MySql</img>
                 </div>
-                <div class="col-xs-4">
+                <div class="col-xs-4 tools-item">
                   <img src="icon/linux.svg" height="20px" width="20px">Linux</img>
+                </div>
+                <div class="col-xs-4 tools-item">
+                  <img src="icon/git.png" height="20px" width="20px">Git</img>
+                </div>
+                <div class="col-xs-4 tools-item">
+                  <img src="icon/apache.png" height="20px" width="20px">Apache</img>
+                </div>
+                <div class="col-xs-4 tools-item">
+                  <img src="icon/jenkins.png" height="20px" width="20px">Jenkins</img>
                 </div>
               </div>
           </div>
